@@ -1,67 +1,88 @@
 package br.com.fiap.recipes.exception;
 
-import br.com.fiap.recipes.model.Recipe;
-import jakarta.validation.ConstraintViolationException;
-import org.springframework.http.HttpStatus;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.http.ResponseEntity;
+import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
-@ControllerAdvice
+@RestControllerAdvice
 public class GlobalExceptionHandler {
 
-    @ExceptionHandler(RecipeNotFountException.class)
-    public ResponseEntity<Object> handleException(RecipeNotFountException exception) {
-        Map<String,Object> body = new HashMap<>();
-        body.put("timestamp", LocalDate.now());
-        body.put("status", HttpStatus.NOT_FOUND.value());
-        body.put("error", "Recipe Not Found");
-        body.put("message", exception.getMessage());
+    @ExceptionHandler(EntityNotFoundException.class)
+    public ResponseEntity notFoundException(){
+        return ResponseEntity.notFound().build();
+    }
 
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(body);
+    @ExceptionHandler(NoSuchFieldException.class)
+    public ResponseEntity noSuchEntityException(){
+        return ResponseEntity.notFound().build();
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<Object> handleException(MethodArgumentNotValidException exception) {
-        Map<String,Object> body = new HashMap<>();
-        body.put("timestamp", LocalDate.now());
-        body.put("status", HttpStatus.BAD_REQUEST.value());
-        body.put("error", "Bad Request");
+    public ResponseEntity badRequestException(MethodArgumentNotValidException ex){
+        System.out.println("--------->ERRO DE MÉTODO");
+        List<FieldError> errors = ex.getFieldErrors();
 
-        List<String> errors = exception.getBindingResult()
-                .getFieldErrors()
-                .stream()
-                .map(fieldError -> fieldError.getField() + ":" + fieldError.getDefaultMessage())
-                .collect(Collectors.toList());
+        List<ValidationError> validationErrors = errors.stream().map(ValidationError::new).toList();
 
-        body.put("details", errors);
-
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(body);
+        return ResponseEntity.badRequest().body(validationErrors);
     }
 
-    @ExceptionHandler(ConstraintViolationException.class)
-    public ResponseEntity<Object> handleException(ConstraintViolationException exception) {
-        Map<String,Object> body = new HashMap<>();
-        body.put("timestamp", LocalDate.now());
-        body.put("status", HttpStatus.BAD_REQUEST.value());
-        body.put("error", "Bad Request");
-
-        List<String> errors = exception
-                .getConstraintViolations()
-                .stream()
-                .map(a -> "erro" + ":" + a.getMessage()).collect(Collectors.toList());
-
-        body.put("details", errors);
-
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(body);
+    public record ValidationError(String field, String message){
+        public  ValidationError(FieldError fieldError){
+            this(fieldError.getField(), fieldError.getDefaultMessage());
+        }
     }
+
+//    @ExceptionHandler(RecipeNotFountException.class)
+//    public ResponseEntity<Object> handleException(RecipeNotFountException exception) {
+//        Map<String,Object> body = new HashMap<>();
+//        body.put("timestamp", LocalDate.now());
+//        body.put("status", HttpStatus.NOT_FOUND.value());
+//        body.put("error", "Recipe Not Found");
+//        body.put("message", exception.getMessage());
+//
+//        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(body);
+//    }
+//
+//    @ExceptionHandler(MethodArgumentNotValidException.class)
+//    public ResponseEntity<Object> handleException(MethodArgumentNotValidException exception) {
+//        Map<String,Object> body = new HashMap<>();
+//        body.put("timestamp", LocalDate.now());
+//        body.put("status", HttpStatus.BAD_REQUEST.value());
+//        body.put("error", "Bad Request");
+//
+//        List<String> errors = exception.getBindingResult()
+//                .getFieldErrors()
+//                .stream()
+//                .map(fieldError -> fieldError.getField() + ":" + fieldError.getDefaultMessage())
+//                .collect(Collectors.toList());
+//
+//        body.put("details", errors);
+//
+//        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(body);
+//    }
+//
+//    @ExceptionHandler(ConstraintViolationException.class)
+//    public ResponseEntity<Object> handleException(ConstraintViolationException exception) {
+//        Map<String,Object> body = new HashMap<>();
+//        body.put("timestamp", LocalDate.now());
+//        body.put("status", HttpStatus.BAD_REQUEST.value());
+//        body.put("error", "Bad Request");
+//
+//        List<String> errors = exception
+//                .getConstraintViolations()
+//                .stream()
+//                .map(a -> "erro" + ":" + a.getMessage()).collect(Collectors.toList());
+//
+//        body.put("details", errors);
+//
+//        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(body);
+//    }
 
 }
